--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<html>
 <head>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
-<html>
+
 	<body>
 		<div class="header">
 			<img src="images/guvi_icon.png" height="2%" width="5%">
@@ -344,20 +344,8 @@
 </form>	
 </div>	
 </div>
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	</body>
+</body>
+</html>
 	
 	
 	
